chore: data access layer